--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "sanitize-html": "^2.17.0"
+    "sanitize-html": "^2.17.0",
+    "gray-matter": "^4.0.3",
+    "marked": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
